# RustminiOS

./: Cargo.toml
.cargo/: config
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  menu.rs  vga_buffer.rs
src/kernel/: interrupts.rs  mod.rs  serial.rs  vga_buffer.rs
src/kernel/task/: executor.rs  keyboard.rs
src/kernel/vmm/: allocator.rs  gdt.rs  memory.rs  mod.rs
src/kernel/vmm/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
