[package]
name = "ex"
version = "0.1.0"
edition = "2021"

[dependencies]
uart_16550 = "0.2.0"
x86_64 = "0.15.0"
spin = "0.9.8"
volatile = "0.2.3"
bootloader = "0.9.0"
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
##############

[profile.dev]
panic="abort"
[profile.release]
panic="abort"

[package.metadata.bootimage]
test-success-exit-code = 33     
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-timeout = 60

[[test]]
name = "should_panic"
harness = false